--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,10 @@
   background-position: center;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 .swiper-slide .title {
   font-family: 'Bellefair', serif;
   font-size: 41px;
