--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+html {
+  overflow-x: hidden;
+  position: relative;
+  height: 100%;
+}
+
+body {
+  overflow-x: hidden;
+  position: relative;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
+}
+
+
 .sample-slider [class^="swiper-button-"]::after {
     font-size: 30px;
 }
